Galene 0.8 (unreleased)

  * Change default video codec to VP9.

9 July 2023: Galene 0.7.2

  * Improve workaround for Safari's autoplay-related mis-features.
  * Fix minor bugs related to stateful tokens.

14 May 2023: Galene 0.7.1

  * Fix incorrect error-handling in token parsing, which could cause
    Galene to crash after receiving a mis-formatted token.
  * Implement a dialog for creating tokens.
  * Tweak peer-to-peer file transfer to more reliably return an error
    message to the user.
  * Fix the workaround for non-standard simulcast in older Firefox
    versions.

10 April 2023: Galene 0.7.0

  * Updated the protocol version to 2.  Dates are now represented in
    ISO 8601 format, and there is a new "error" field in error messages
    that contains a machine-readable identifier.
  * Implemented stateful tokens ("invitations").
  * Made more errors non-fatal, which makes it possible for the client
    to recover in more situations.
  * Reworked the progress indicator used during file transfer.
  * Added Referrer-Policy and X-Content-Type-Options headers to HTTP
    responses (Galene was already generating HTML links with the
    "noreferrer" option).  Thanks to Alexandre Iooss.
  * Fixed a bug in the handling of leave messages.  (The bundled client
    never sends leave, it just disconnects, so the bug never triggerred.)
  * Changed the way simulcast tracks are selected to not depend on the rid.

11 January 2023: Galene 0.6.2

  * Disable simulcast for screensharing; this didn't work well with many
    browsers.
  * Fix parsing of VP8 packets with degenerate headers.
  * Fix computation of group URL when running in insecure mode.
  * Add configuration option "proxyURL", which makes it easier to run
    Galene behind a reverse proxy.
  * Disable ulimit checking on BSD systems, where our code doesn't compile.

7 October 2022: Galene 0.6.1

  * Add a camera/microphone indicator in the users list, and hide