@@ -1,6 +1,7 @@
 Galene 0.8 (unreleased)
 
   * Change default video codec to VP9.
+  * Disable simulcast on Firefox by default.
 
 9 July 2023: Galene 0.7.2
 
